@@ -16,6 +16,9 @@ update-manager (1:0.93.16) intrepid; urgency=low
   * debian/control:
     - update the version dependency for python-apt, we need
       stuff from 0.7.5 (LP: #257781)
+  * DistUpgrade/DistUpgradeView.py:#
+    - make FuzzyTimeToStr() properly deal with plural forms
+      (LP: #267234)
   
   [ Brian Murray ]
   * UpdateManager/UpdateManager.py:
